<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:plainpie="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="movieModel" type="com.emi.nollyfilms.vm.PresenterViewModel"/>
    </data>

<androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_height"
        android:layout_gravity="center"
        android:onClick="@{movieModel::onClick}"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:foreground="?attr/selectableItemBackground">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

        <ImageView
                android:id="@+id/thumbnail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_view_height"
                android:scaleType="centerCrop"
                tools:srcCompat="@{movieModel.thumbnail()}"/>

        <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="@dimen/text_title"
                android:layout_alignBottom="@+id/thumbnail"
                android:background="@color/transparent"
                android:gravity="center"
                android:text="@{movieModel.title()}"
                android:hint="title"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/white"
                tools:text="@string/item_title" />

        <TextView
                android:id="@+id/desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/thumbnail"
                android:layout_marginBottom="@dimen/md_keylines"
                android:layout_marginLeft="@dimen/md_keylines"
                android:layout_marginRight="@dimen/md_keylines"
                android:layout_marginTop="@dimen/md_keylines"
                android:ellipsize="end"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="@{movieModel.desc()}"
                android:singleLine="true"
                android:textAppearance="?attr/textAppearanceHeadline2"
                android:textColor="@color/text_color_for_movie_overview"
                android:textSize="@dimen/article_subheading"
                android:textAlignment="center"
                tools:text="@string/item_description" />

        <ImageButton
                android:id="@+id/share_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="@dimen/image_button_size"
                android:layout_height="@dimen/image_button_size"
                android:contentDescription="@string/share"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:onClick="@{() -> movieModel.onShare()}"
                android:layout_below="@+id/desc"
                android:layout_marginRight="@dimen/md_keylines"
                android:src="@drawable/ic_share_black_24dp"
                android:tint="@color/text_color_for_movie_overview" />

        <az.plainpie.PieView
                android:id="@+id/pieView"
                style="?android:attr/borderlessButtonStyle"
                android:contentDescription="@string/fav"
                android:layout_width="@dimen/image_button_size"
                android:layout_height="@dimen/image_button_size"
                plainpie:inner_text_visibility="true"
                plainpie:percentage="@{safeUnbox((float) movieModel.popular())}"
                plainpie:percentage_size="15"
                android:layout_alignStart="@+id/desc"
                android:layout_alignTop="@+id/share_button"/>
    </RelativeLayout>
</androidx.cardview.widget.CardView>
</layout>