<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable name="viewModel" type="com.emi.nollyfilms.vm.HomeViewModel"/>
        <variable name="activity" type="com.emi.nollyfilms.fragments.HomeFragment"/>
        <import type="android.view.View"/>
    </data>
<androidx.coordinatorlayout.widget.CoordinatorLayout
           xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/white"
             tools:context=".ui.MovieActivity">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:refreshing="@{viewModel.isLoading()}"
            app:onRefreshListener="@{() -> viewModel.refresh(swipeContainer)}">


        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/mrecyclerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:scrollbars="vertical"
                tools:listitem="@layout/content_main"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <TextView
            android:id="@+id/empty_state"
            android:layout_width="match_parent"
            android:layout_height="@dimen/empty_height"
            android:fontFamily="sans-serif-condensed"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin"
            android:textAlignment="center"
            android:padding="@dimen/text_padding"
            android:text="@string/unavailable"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@android:color/black"
            android:visibility="gone" />
    <Button
            android:id="@+id/error_btn_retry"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/tryconnect"
            android:layout_marginTop="@dimen/tryconnect"
            android:backgroundTint="@android:color/holo_red_light"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/btn_retry"
            android:textColor="@color/white"
            android:visibility="gone" />

    <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{safeUnbox(viewModel.isLoading()) ? View.VISIBLE : View.GONE}"
            android:layout_gravity="center" />

    <Button android:id="@+id/error_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:elevation="5dp"
            android:visibility="gone"
            android:onClick="@{() -> activity.retry()}"
            android:text="@string/retry"
            android:layout_gravity="center"/>


</androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>